# HogarthAI

./: .gitignore  prompt.txt  pyproject.toml
src/: main.py
